--- a/Neutrinodevs.PedidosOnline.Presentation/wwwroot/bootstrap/css/bootstrap.css
+++ b/Neutrinodevs.PedidosOnline.Presentation/wwwroot/bootstrap/css/bootstrap.css
@@ -2592,7 +2592,7 @@ textarea.form-control {
     padding: .375rem .75rem;
     font-size: 1rem;
     line-height: 1.5;
-    border-radius: .25rem;
+    /*border-radius: .25rem;*/
     transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out
 }
 
