Registro de pedidos

--- a/Neutrinodevs.PedidosOnline.Presentation/Views/Order/Processing.cshtml
+++ b/Neutrinodevs.PedidosOnline.Presentation/Views/Order/Processing.cshtml
@@ -1,4 +1,4 @@
-﻿
+﻿@model Neutrinodevs.PedidosOnline.Domain.DTOs.Order.FinalOrderDto 
 @{
     ViewData["Title"] = "OrderProcess";
     Layout = "~/Views/Shared/_MasterLayout.cshtml";
