--- a/Neutrinodevs.PedidosOnline.Presentation/Views/Order/Processing.cshtml
+++ b/Neutrinodevs.PedidosOnline.Presentation/Views/Order/Processing.cshtml
@@ -11,7 +11,7 @@
                 <div class="card-body">
                     <h2>Estamos preparando tu pedido</h2>
                     <p>Nuestro repartidor encargado es <strong></strong>, se pondrá en contacto contigo al llegar a tu ubicación.</p>
-                    <strong class="mr-5">Nº pedido: <span id="delivery-time"></span></strong><strong class="ml-5">Hora de entrega:</strong> <span id="delivery-time"></span>
+                    <strong class="mr-5">Nº pedido: @Model.Number<span id="delivery-time"></span></strong><strong class="ml-5">Hora de entrega: @Model.DeliveryTime</strong> <span id="delivery-time"></span>
                     <section class="mt-4">
                         <div class="row">
                             <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
@@ -20,12 +20,19 @@
                                         <thead class="bg-black text-white">
                                             <tr>
                                                 <th>PRODUCTO</th>
-                                                <th>PRECIO</th>
                                                 <th>CANTIDAD</th>
-                                                <th>SUBTOTAL</th>
+                                                <th>PRECIO</th>
                                             </tr>
                                         </thead>
                                         <tbody id="tbody-invoice">
+                                            @foreach (var item in Model.items)
+                                            {
+                                             <tr>
+                                                <td>@item.name</td>
+                                                <td>@item.quantity</td>
+                                                <td>@item.price</td>
+                                             </tr>
+                                            }
                                         </tbody>
                                     </table>
                                 </div>
@@ -39,15 +46,15 @@
                                         <tbody class='text-right'>
                                             <tr>
                                                 <th>SUBTOTAL</th>
-                                                <td id="subtotal">0</td>
+                                                <td id="subtotal">@Model.Subtotal</td>
                                             </tr>
                                             <tr>
                                                 <th>IVA</th>
-                                                <td id="iva">0</td>
+                                                <td id="iva">@Model.Iva</td>
                                             </tr>
                                             <tr>
                                                 <th>TOTAL</th>
-                                                <td id="total">0</td>
+                                                <td id="total">@Model.Total</td>
                                             </tr>
                                         </tbody>
                                     </table>
