--- a/Neutrinodevs.PedidosOnline.Presentation/Views/Shared/_MasterLayout.cshtml
+++ b/Neutrinodevs.PedidosOnline.Presentation/Views/Shared/_MasterLayout.cshtml
@@ -26,8 +26,8 @@
             </div>
             <h5 class="text-center">Mi Pedido</h5>
             <hr class="separator" />
-            <label>SUBTOTAL: $<span id="subtotal-cart"></span></label>  
-            <a href='@Url.Action("Index", "Cart")' class="btn btn-block back-primary" id="btn_order">ORDENAR</a>
+            <label>SUBTOTAL: $<span id="subtotal-cart"></span></label>
+            <button onclick='windows.location = @Url.Action("Index", "Cart")' class="btn btn-block back-primary" id="btn_order">ORDENAR</button>
             <button class="btn btn-secondary btn-block" id="btn_empty_cart">VACIAR CARRITO</button>
             <hr />
             <div id="wrap-cart-items">
