--- a/Neutrinodevs.PedidosOnline.Presentation/Views/Dish/Partial/_Dishes.cshtml
+++ b/Neutrinodevs.PedidosOnline.Presentation/Views/Dish/Partial/_Dishes.cshtml
@@ -1,5 +1,5 @@
 ﻿@model IEnumerable<Neutrinodevs.PedidosOnline.Domain.DTOs.Product.ProductDTO>
-<div class="row my-4">
+<div class="row my-4" id="products">
     @foreach (var item in Model)
     {
         <div class="col-md-6 col-lg-4 col-sm-12">
@@ -9,7 +9,7 @@
                 <div class="card-body">
                     <strong>@item.Nombre</strong>
                     <br />
-                    <span>@item.Precio</span>
+                    <span>$@item.Precio</span>
                 </div>
                 <div class="overlay">
                     <h5 class="text"><i class="fa fa-plus-circle"></i> Agregar al carrito</h5>
