--- a/Neutrinodevs.PedidosOnline.Presentation/Views/Order/Checkout.cshtml
+++ b/Neutrinodevs.PedidosOnline.Presentation/Views/Order/Checkout.cshtml
@@ -6,19 +6,66 @@
 @section HeaderScript{
     <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
     <script>
-        let map;
+
+        let map, infoWindow, _pos, marker;
+
+        var options = {
+            enableHighAccuracy: true,
+            timeout: 5000,
+            maximumAge: 0
+        };
+
+        function success(pos) {
+            _pos = pos.coords;
+            console.log('Latitude : ' + _pos.latitude);
+            console.log('Longitude: ' + _pos.longitude);
+            console.log('More or less ' + _pos.accuracy + ' meters.');
+        };
+
+        function error(err) {
+            console.warn('ERROR(' + err.code + '): ' + err.message);
+        }
+
+        if (navigator.geolocation) {
+            navigator.geolocation.getCurrentPosition(success, error, options);
+        } else {
+            // Browser doesn't support Geolocation
+            console.log('Browser doesnt support Geolocation');
+            //handleLocationError(false, infoWindow, map.getCenter());
+        }
 
         function initMap() {
+            let current_position = { lat: _pos.latitude, lng: _pos.longitude };
             map = new google.maps.Map(document.getElementById("map"), {
-                center: { lat: -34.397, lng: 150.644 },
-                zoom: 20,
+                center: current_position,
+                zoom: 15,
+                mapTypeId: 'roadmap'
             });
+            marker = new google.maps.Marker({
+                position: current_position,
+                map,
+                draggable: true,
+                title: "Mi ubicación actual"
+            });
+            showLocationOnMap(current_position);
         }
+
+        
+        function showLocationOnMap(current_position) {
+            marker.setPosition(current_position);
+            map.setCenter(current_position);
+        }
+        const ok = () => {
+            var markerLatLng = marker.getPosition();
+            console.log(markerLatLng.lat());
+            console.log(markerLatLng.lng());
+        }
+        
     </script>
 }
 @await Html.PartialAsync("~/Views/Shared/_Navbar.cshtml")
 <div class="container">
-    
+    <button onclick="ok()">OK</button>
     <div class="row my-5">
         <div class="col-lg-7 col-md-7 col-sm-12">
             <h3>Crear una cuenta</h3>
@@ -81,7 +128,7 @@
     </div>
 </div>
 <!-- Modal -->
-<div class="modal fade" id="map-modal" tabindex="-1" role="dialog" aria-labelledby="map-modalTitle" aria-hidden="true" style="min-width:90%;">
+<div class="modal fade" id="map-modal" tabindex="-1" role="dialog" aria-labelledby="map-modalTitle" aria-hidden="true" style="min-width:95%;">
     <div class="modal-dialog modal-xl" role="document">
         <div class="modal-content">
             <div class="modal-header">
