--- a/Neutrinodevs.PedidosOnline.Presentation/Views/Shared/_Navbar.cshtml
+++ b/Neutrinodevs.PedidosOnline.Presentation/Views/Shared/_Navbar.cshtml
@@ -1,13 +1,11 @@
-﻿<nav class="navbar navbar-expand-lg navbar-dark">
+﻿<nav class="navbar navbar-expand-md back-black">
     <div class="container">
         <div class="logo"><span>LA PESCA</span></div>
         <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
             <ul class="navbar-nav ml-auto   ">
-                <li class="nav-item"><a class="nav-link" href="#">Inicio</a></li>
-                <li class="nav-item"><a class="nav-link" href="#">Sobre nosotros</a></li>
+                <li class="nav-item"><a class="nav-link" href='@Url.Action("Index", "Home")'>Inicio</a></li>
+                <li class="nav-item"><a class="nav-link" href='@Url.Action("About", "Home")'>Sobre nosotros</a></li>
             </ul>
-
         </div>
-
     </div>
 </nav>
