configuración para uso de sessions; se guarda usuario en sesión; avance en login de usuario por tipo

--- a/Neutrinodevs.PedidosOnline.Presentation/Views/Dashboard/Index.cshtml
+++ b/Neutrinodevs.PedidosOnline.Presentation/Views/Dashboard/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@{
+﻿@model Neutrinodevs.PedidosOnline.Domain.DTOs.User.UserAuthenticateDto
+@{
     Layout = "_DashboardLayout";
     ViewData["Title"] = "Administración";
 }
