login de usuarios para entrar al dashboard; pequeños arreglos al template dashboard

--- a/Neutrinodevs.PedidosOnline.Presentation/Views/Dashboard/Index.cshtml
+++ b/Neutrinodevs.PedidosOnline.Presentation/Views/Dashboard/Index.cshtml
@@ -5,8 +5,7 @@
 }
 
 <div class="main-content-head">
-    <h2>hello james!</h2>
-    <p>Welcome to your Dashboard</p>
+    
 </div>
 
 <div class="profile-content">
@@ -15,7 +14,7 @@
             <div class="profile-state">
                 <div class="icon-box">
                     <span class="icon-bg icon-bg-1">
-                        <img src="assets/images/user-icon.png" alt="user-icon">
+                        <img src="/images/dashboard/user-icon.png" alt="user-icon">
                     </span>
                     <h2>total visitors</h2>
                 </div><!--/.icon-box-->
@@ -27,7 +26,7 @@
             <div class="profile-state">
                 <div class="icon-box">
                     <span class="icon-bg icon-bg-2">
-                        <img src="assets/images/add-cart.png" alt="add-cart">
+                        <img src="/images/dashboard/add-cart.png" alt="add-cart">
                     </span>
                     <h2>total order placeed</h2>
                 </div><!--/.icon-box-->
@@ -39,7 +38,7 @@
             <div class="profile-state">
                 <div class="icon-box">
                     <span class="icon-bg icon-bg-3">
-                        <img src="assets/images/money-icon.png" alt="money-icon">
+                        <img src="/images/dashboard/money-icon.png" alt="money-icon">
                     </span>
                     <h2>total profit</h2>
                 </div><!--/.icon-box-->
@@ -51,7 +50,7 @@
             <div class="profile-state">
                 <div class="icon-box">
                     <span class="icon-bg icon-bg-4">
-                        <img src="assets/images/plane-icon.png" alt="deliver-icon">
+                        <img src="/images/dashboard/plane-icon.png" alt="deliver-icon">
                     </span>
                     <h2>delivery peocessing</h2>
                 </div><!--/.icon-box-->
