--- a/Neutrinodevs.PedidosOnline.Presentation/Views/Shared/_DashboardLayout.cshtml
+++ b/Neutrinodevs.PedidosOnline.Presentation/Views/Shared/_DashboardLayout.cshtml
@@ -7,13 +7,13 @@
     <link rel="icon" href="favicon.ico" type="image/x-icon" />
     <environment include="Development">
         @*<link rel="stylesheet" href="~/bootstrap/css/bootstrap.css" />*@
-        <link rel="stylesheet" href="~/css/master.css" />
         <link rel="stylesheet" href="~/css/font-awesome.min.css">
         <link rel="stylesheet" href="https://cdn.linearicons.com/free/1.0.0/icon-font.min.css">
         <link rel="stylesheet" href="~/chartist/css/chartist.min.css">
         <link rel="stylesheet" href="~/css/bootstrap.min.css">
         <link rel="stylesheet" href="~/css/style.css">
         <link rel="stylesheet" href="~/css/responsive.css">
+        <link rel="stylesheet" href="~/css/master.css" />
     </environment>
 </head>
 <body>
@@ -23,7 +23,7 @@
         <nav class="navbar navbar-default navbar-fixed-top">
             <div class="brand">
                 <a href="index.html">
-                    La Pesca
+                    LA PESCA
                 </a>
             </div><!--/.brand -->
             <div class="container-fluid">
@@ -64,7 +64,7 @@
                         </li>
                         <li class="dropdown">
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                                <img src="assets/images/parson.png" class="img-circle" alt="parson-img">
+                                <img src="/images/dashboard/parson.png" class="img-circle" alt="parson-img">
                                 <i class="icon-submenu fa fa-angle-down"></i>
                             </a>
                             <ul class="dropdown-menu">
