arreglos estéticos de dashboard

--- a/Neutrinodevs.PedidosOnline.Presentation/Views/Shared/_DashboardLayout.cshtml
+++ b/Neutrinodevs.PedidosOnline.Presentation/Views/Shared/_DashboardLayout.cshtml
@@ -13,7 +13,7 @@
         <link rel="stylesheet" href="~/css/bootstrap.min.css">
         <link rel="stylesheet" href="~/css/style.css">
         <link rel="stylesheet" href="~/css/responsive.css">
-        <link rel="stylesheet" href="~/css/master.css" />
+        
     </environment>
 </head>
 <body>
@@ -125,8 +125,8 @@
 
             <!-- MAIN CONTENT -->
             <div class="main-content">
-                <div class="container-fluid">
-                @RenderBody()
+                <div class="container-fluid" style="min-height: 70vh;">
+                    @RenderBody()
                 </div><!--/.container-fluid-->;
 
             </div><!--/.main-content-->
