--- a/Neutrinodevs.PedidosOnline.Presentation/Views/Shared/_DashboardLayout.cshtml
+++ b/Neutrinodevs.PedidosOnline.Presentation/Views/Shared/_DashboardLayout.cshtml
@@ -13,7 +13,9 @@
         <link rel="stylesheet" href="~/css/bootstrap.min.css">
         <link rel="stylesheet" href="~/css/style.css">
         <link rel="stylesheet" href="~/css/responsive.css">
+        <link href="~/css/dataTables.bootstrap.min.css" rel="stylesheet" />
         
+        <script src="~/lib/jquery/dist/jquery.js"></script>
     </environment>
 </head>
 <body>
@@ -130,11 +132,10 @@
                 </div><!--/.container-fluid-->;
 
             </div><!--/.main-content-->
-
         </div>
         <!-- END MAIN -->
         <div class="clearfix"></div>
-        <footer>
+        <footer class="mt-4">
             <div class="container-fluid">
                 <p>&copy; 2021 <a href="#">La Pesca</a>. Reservados todos los derechos.</p>
             </div>
@@ -142,21 +143,24 @@
         </footer>
 
     </div>
-    
+
     <environment include="Development">
-        <script src="~/lib/jquery/dist/jquery.js"></script>
+
         <script src="~/lib/jquery-validation/dist/jquery.validate.js"></script>
-        <script src="~/bootstrap/js/bootstrap.js"></script>
+        @*<script src="~/bootstrap/js/bootstrap.js"></script>*@
         <script src="~/aspnet/signalr/dist/browser/signalr.min.js"></script>
         <script src="~/js/dashboard/dashboard.js"></script>
+        <script src="~/datatables.net/jquery.dataTables.min.js"></script>
+        <script src="~/js/dataTables.bootstrap3.min.js"></script>
     </environment>
     <!--jquery-1.12.4.min.js-->
-    <script src="~/js/jquery.min.js"></script>
+    @*<script src="~/js/jquery.min.js"></script>*@
+
 
     <!--chartist.min.js-->
-    <script src="~/chartist/js/chartist.min.js"></script>
-    <script src="~/chartist/js/chartist-tooltip-plugin.js"></script>
-    <script src="~/chartist/js/chartist-custom.js"></script>
+    @*<script src="~/js/chartist/js/chartist.min.js"></script>
+        <script src="~/js/chartist/js/chartist-tooltip-plugin.js"></script>
+        <script src="~/js/chartist/js/chartist-custom.js"></script>*@
 
     <!--bootstrap.min.js-->
     <script src="~/js/bootstrap.min.js"></script>
@@ -171,7 +175,6 @@
     <script src="~/js/d3.min.js"></script>
     <script src="~/js/topojson.js"></script>
     <script src="~/js/datamaps.world.min.js"></script>
-
     <!--fontawesome-all.min.js-->
     <script src="~/js/fontawesome-all.min.js"></script>
 
