--- a/Neutrinodevs.PedidosOnline.Presentation/Views/User/Index.cshtml
+++ b/Neutrinodevs.PedidosOnline.Presentation/Views/User/Index.cshtml
@@ -5,35 +5,47 @@
     int numRows = 0;
 }
 
-<div style="margin-top: 3rem">
-    <h1>Usuarios</h1>
-    <table class="table table-hover">
-        <thead>
-            <tr>
-                <th scope="col">#</th>
-                <th scope="col">Usuario</th>
-                <th scope="col">Rol</th>
-                <th scope="col">Nombres</th>
-                <th scope="col"></th>
-                <th scope="col"></th>
-            </tr>
-        </thead>
-        <tbody>
-            @foreach (var user in Model)
-            {   
-                numRows++;
+<div style="margin-top: 3rem; padding: 3rem" class="panel panel-default">
+    <h1 style="padding-bottom: 3rem;">Usuarios</h1>
+    <div class="table-responsive">
+        <table class="table table-hover table-striped" id="tbl_users">
+            <thead>
                 <tr>
-                    <th scope="row">@numRows</th>
-                    <td>@user.Username</td>
-                    <td>@user.TipoUsuario</td>
-                    <td>@user.Nombres</td>
-                    <td><button class="btn btn-warning btn-sm"><i class="fa fa-edit"></i></button></td>
-                    <td><button class="btn btn-danger btn-sm"><i class="fa fa-trash"></i></button></td>
+                    <th scope="col">#</th>
+                    <th scope="col">Usuario</th>
+                    <th scope="col">Rol</th>
+                    <th scope="col">Nombres</th>
+                    <th scope="col"></th>
+                    <th scope="col"></th>
                 </tr>
-            }
-        </tbody>
-    </table>
+            </thead>
+            <tbody>
+                @foreach (var user in Model)
+                {
+                    numRows++;
+                    <tr>
+                        <th scope="row">@numRows</th>
+                        <td>@user.Username</td>
+                        <td>@user.TipoUsuario</td>
+                        <td>@user.Nombres</td>
+                        <td><button class="btn btn-warning btn-sm"><i class="fa fa-edit"></i></button></td>
+                        <td><button class="btn btn-danger btn-sm"><i class="fa fa-trash"></i></button></td>
+                    </tr>
+                }
+            </tbody>
+        </table>
+    </div>
+    
 </div>
+<script>
+    $(document).ready(function () {
+        $("#tbl_users").dataTable({
+            "language": {
+                "url": "/datatables.net/datatables-es_es.json"
+            }
+        });
+    });
+</script>
 @section Scripts{
     <script src="~/datatables.net/jquery.dataTables.min.js"></script>
 }
