controlador de empleados; inclusión de mapper sin pruebas

--- a/Neutrinodevs.PedidosOnline.Presentation/Views/User/Index.cshtml
+++ b/Neutrinodevs.PedidosOnline.Presentation/Views/User/Index.cshtml
@@ -7,6 +7,9 @@
 
 <div style="margin-top: 3rem; padding: 3rem" class="panel panel-default">
     <h1 style="padding-bottom: 3rem;">Usuarios</h1>
+    <div class="row">
+
+    </div>
     <div class="table-responsive">
         <table class="table table-hover table-striped" id="tbl_users">
             <thead>
