--- a/Neutrinodevs.PedidosOnline.Presentation/Views/Delivery/Index.cshtml
+++ b/Neutrinodevs.PedidosOnline.Presentation/Views/Delivery/Index.cshtml
@@ -1,8 +1,53 @@
-﻿
+﻿@model List<Neutrinodevs.PedidosOnline.Domain.DTOs.Delivery.OrderDeliveryDTO>
 @{
     ViewData["Title"] = "Delivery";
     Layout = "~/Views/Shared/_DashboardLayout.cshtml";
+    int numRows = 0;
 }
-<div class="container" style="margin-top: 3rem;">
-    <H1>ENTREGA</H1>
+
+<div style="margin-top: 3rem; padding: 3rem;" class="panel panel-default min-h-75">
+    <h1 style="padding-bottom: 3rem;">Pedidos</h1>
+    <div class="row">
+        <div class="col-12" style="margin-top:2rem">
+            @if (Model.Count > 0)
+            {
+                <div class="table-responsive">
+                    <table class="table table-hover table-bordered" id="tbl_delivery">
+                        <thead>
+                            <tr>
+                                <th scope="col">#</th>
+                                <th scope="col">Nº PEDIDO</th>
+                                <th scope="col">CLIENTE</th>
+                                <th scope="col">CONTACTO</th>
+                                <th scope="col">DIRECCIÓN</th>
+                                <th scope="col"></th>
+                                <th scope="col"></th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            @foreach (var order in Model)
+                            {
+                                numRows++;
+                            <tr>
+                                <th scope="row">@numRows</th>
+                                <td>@order.Number</td>
+                                <td>@order.CustomerName</td>
+                                <td>@order.CellphoneNumber</td>
+                                <td>@order.Address</td>
+                                <td><button class="btn btn-info btn-sm">VER DETALLE</button></td>
+                                <td><button class="btn btn-success btn-sm">ASIGNARME</button></td>
+                            </tr>
+                            }
+                        </tbody>
+                    </table>
+                </div>
+            }
+            else
+            {
+                <div>
+                    <h4 class="text-center">No hay nuevos pedidos.</h4>
+                </div>
+            }
+        </div>
+    </div>
 </div>
