--- a/Neutrinodevs.PedidosOnline.Presentation/wwwroot/css/style.css
+++ b/Neutrinodevs.PedidosOnline.Presentation/wwwroot/css/style.css
@@ -987,3 +987,4 @@ ul.notifications > li > .more:hover, ul.notifications > li > .more:focus {
 .min-h-75 {
     min-height: 75vh !important;
 }
+.see-details{}
