--- a/Neutrinodevs.PedidosOnline.Presentation/Views/Shared/_DashboardLayout.cshtml
+++ b/Neutrinodevs.PedidosOnline.Presentation/Views/Shared/_DashboardLayout.cshtml
@@ -14,9 +14,10 @@
         <link rel="stylesheet" href="~/css/style.css">
         <link rel="stylesheet" href="~/css/responsive.css">
         <link href="~/css/dataTables.bootstrap.min.css" rel="stylesheet" />
-        
+
         <script src="~/lib/jquery/dist/jquery.js"></script>
     </environment>
+    @RenderSection("HeaderScripts", required: false)
 </head>
 <body>
     <div id="wrapper">
@@ -148,7 +149,8 @@
 
         <script src="~/lib/jquery-validation/dist/jquery.validate.js"></script>
         @*<script src="~/bootstrap/js/bootstrap.js"></script>*@
-        <script src="~/aspnet/signalr/dist/browser/signalr.min.js"></script>
+        @RenderSection("SignalR", required: false)
+        @*<script src="~/aspnet/signalr/dist/browser/signalr.min.js"></script>*@
         <script src="~/js/dashboard/dashboard.js"></script>
         <script src="~/datatables.net/jquery.dataTables.min.js"></script>
         <script src="~/js/dataTables.bootstrap3.min.js"></script>
